# pi-photo-album

./: .gitignore  MANIFEST.in  README.md  install.md  install.sh  pi-photo-album.service  pi-photo-album.service.tmpl  pyproject.toml  server.py  slideshow.py  startup.sh  utils.py
admin/aws/: .terraform.lock.hcl  README.md  dynamo.tf  group.tf  iam.tf  lambda.tf  main.tf  onboard.md  queue.tf  s3.tf  user.tf
admin/aws/policies/: allow-sns-write-policy.tpl  assume_role.json  assume_role_policy.tpl  event_queue_policy.tpl  event_table_policy.json  lambda_assume_role_policy.json  publish_event_policy.tpl  push_event_policy.tpl  read_queue_policy.tpl  read_receive_event_queue_policy.tpl  receive_event_queue_policy.tpl  s3_read_write.tpl  s3_read_write_policy.tpl  service_assume_role_policy.tpl  (+1 more)
app/: README.md  announcer.py  display_slideshow.sh  globals.py  requirements-dev.txt  requirements.txt  server.py  slideshow.py  test.py  utils.py
app/adapters/: exceptions.py  s3_adapter.py
app/cloud_adapters/: adapter.py  s3_adapter.py
app/cloud_clients/: aws_client.py  cloud_client.py  exceptions.py  s3_client.py
app/config/: config.py
app/event_consumer/: consumer.py  main.py
app/routes/: event.py  filesystem.py  slideshow.py  template.py
app/static/: dialogs.js  fileSystem.js  imageUploader.js  index.css  index.js  settings.js  utils.js
app/templates/: index.html
app/tests/: slideshow_test.py  utils.py  utils_test.py
app/utils/: aws.py  filesystem.py  offline.py  utils.py  utils_test.py
static/: index.css  index.js
templates/: index.html
(+14 files in other folders)
